# git-ai-commit

./: Cargo.toml  README.md
src/: ai_prompt.rs  gemini_api.rs  git_utils.rs  main.rs
