[package]
name = "git-ai-commit"
version = "0.1.2"
edition = "2024"
authors = ["ince01 <alt.f4.to@gmail.com>"]
description = "🤖 Smarter commits, crafted by AI & powered by Rust’s speed 🦀💡"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ince01/git-ai-commit"
homepage = "https://github.com/ince01/git-ai-commit"
readme = "README.md"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
git2 = "0.19"
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
